[package]
name = "simurail"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Fachep Han <mail@fachep.com>"]

[dependencies]
bevy_rand = { version = "0.12.1", features = ["wyrand"] }
petgraph = "0.8.3"

[dependencies.bevy]
version = "0.17.3"
default-features = false
features = [
    "std",
    "async_executor",
    "bevy_scene",
    "debug",
    "reflect_auto_register"
]

[target.'cfg(all(target_family = "wasm", any(target_os = "unknown", target_os = "none")))'.dependencies]
bevy_rand = { version = "0.12.1", features = ["wasm_js"] }
